--- a/repl/index.html
+++ b/repl/index.html
@@ -22,7 +22,7 @@
   <div class="viewport-full flex-parent flex-parent--column">
     <div class="border-b border--gray-light px24 py12">
       <h1 class="txt-l txt-bold">
-        <a href="https://github.com/mapbox/jsxtreme-markdown" class="link">jsxtreme-markdown</a> REPL
+        <a href="https://github.com/mapbox/jsxtreme-markdown" class="link link--pink">jsxtreme-markdown</a> REPL
       </h1>
     </div>
     <div class="flex-child flex-child--grow flex-parent flex-parent--stretch-cross">
