--- a/repl/index.html
+++ b/repl/index.html
@@ -9,11 +9,12 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/mode/javascript/javascript.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/mode/xml/xml.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/mode/jsx/jsx.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/mode/multiplex.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/fold/xml-fold.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/edit/matchbrackets.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/edit/closebrackets.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/edit/continuelist.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/mode/multiplex.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/edit/trailingspace.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/selection/mark-selection.min.js'></script>
   <link href='dist/assembly.css' rel='stylesheet'>
   <script async defer src='dist/assembly.js'></script>
