--- a/index.html
+++ b/index.html
@@ -23,8 +23,26 @@
   <div class="viewport-full flex-parent flex-parent--column">
     <div class="border-b border--gray-light px24 py12">
       <h1 class="txt-l txt-bold">
-        <a href="https://github.com/mapbox/jsxtreme-markdown" class="link link--pink">jsxtreme-markdown</a> REPL
+        The <a href="https://github.com/mapbox/jsxtreme-markdown" class="link link--pink">jsxtreme-markdown</a> xperimental playground
       </h1>
+      <p class="txt-s mt6">
+        <a href="https://github.com/mapbox/jsxtreme-markdown" class="link">jsxtreme-markdown</a> allows you to interpolate JS expressions and JSX elements in your Markdown, between <code className="txt-code">{{ delimiters }}</code>, and compiles the Markdown to JSX.
+      </p>
+      <p class="txt-s">
+         Look at the xample below, xperiment, and <a href="https://github.com/mapbox/jsxtreme-markdown" class="link">check out the repository</a>.
+      </p>
+    </div>
+    <div class="grid flex-child txt-s txt-mono border-b border--gray-light">
+      <div class="col col--12 col--6-mm">
+        <div class="px12 py3">
+          INPUT: jsxtreme-markdown
+        </div>
+      </div>
+      <div class="col col--12 col--6-mm border-l border--gray-light">
+        <div class="px12 py3">
+          OUTPUT: JSX
+        </div>
+      </div>
     </div>
     <div class="flex-child flex-child--grow flex-parent flex-parent--stretch-cross">
       <div class="grid flex-child flex-child--grow wmax-none">
