Update more dependencies

--- a/repl/index.html
+++ b/repl/index.html
@@ -48,14 +48,10 @@
       </div>
       <div class="grid txt-s txt-mono border-b border--gray-light">
         <div class="col w-full w-1/2-mm">
-          <div class="px12 py3">
-            INPUT: jsxtreme-markdown
-          </div>
+          <div class="px12 py3">INPUT: jsxtreme-markdown</div>
         </div>
         <div class="col w-full w-1/2-mm border-l border--gray-light">
-          <div class="px12 py3">
-            OUTPUT: JSX
-          </div>
+          <div class="px12 py3">OUTPUT: JSX</div>
         </div>
       </div>
       <div class="flex--grow flex flex--stretch-cross">
@@ -70,7 +66,16 @@
       <div class="border-t border--gray-light px6 py6 hmin-24">
         <div
           id="error"
-          class="none px12 py6 border border--red round bg-red-faint color-red txt-code"
+          class="
+            none
+            px12
+            py6
+            border border--red
+            round
+            bg-red-faint
+            color-red
+            txt-code
+          "
         ></div>
       </div>
     </div>
