--- a/index.html
+++ b/index.html
@@ -1,59 +1,84 @@
 <!DOCTYPE html>
-<html lang='en'>
-<head>
-  <title>jsxtreme-markdown repl</title>
-  <meta charset='utf-8'>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/codemirror.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/mode/markdown/markdown.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/mode/javascript/javascript.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/mode/xml/xml.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/mode/jsx/jsx.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/mode/multiplex.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/fold/xml-fold.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/edit/matchbrackets.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/edit/closebrackets.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/edit/continuelist.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/edit/trailingspace.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/selection/mark-selection.min.js'></script>
-  <link href='dist/assembly.css' rel='stylesheet'>
-  <script async defer src='dist/assembly.js'></script>
-</head>
-<body>
-  <div class="viewport-full flex-parent flex-parent--column">
-    <div class="border-b border--gray-light px24 py12">
-      <h1 class="txt-l txt-bold">
-        The <a href="https://github.com/mapbox/jsxtreme-markdown" class="link link--pink">jsxtreme-markdown</a> xperimental playground
-      </h1>
-      <p class="txt-s mt6">
-        <a href="https://github.com/mapbox/jsxtreme-markdown" class="link">jsxtreme-markdown</a> allows you to interpolate JS expressions and JSX elements in your Markdown, between <code className="txt-code">{{ delimiters }}</code>, and compiles the Markdown to JSX.
-      </p>
-      <p class="txt-s">
-         Look at the xample below, xperiment, and <a href="https://github.com/mapbox/jsxtreme-markdown" class="link">check out the repository</a>.
-      </p>
-    </div>
-    <div class="grid flex-child txt-s txt-mono border-b border--gray-light">
-      <div class="col col--12 col--6-mm">
-        <div class="px12 py3">
-          INPUT: jsxtreme-markdown
+<html lang="en">
+  <head>
+    <title>jsxtreme-markdown repl</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/codemirror.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/mode/markdown/markdown.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/mode/javascript/javascript.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/mode/xml/xml.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/mode/jsx/jsx.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/mode/multiplex.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/fold/xml-fold.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/edit/matchbrackets.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/edit/closebrackets.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/edit/continuelist.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/edit/trailingspace.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.28.0/addon/selection/mark-selection.min.js"></script>
+    <link href="dist/assembly.css" rel="stylesheet" />
+    <script async defer src="dist/assembly.js"></script>
+  </head>
+  <body>
+    <div class="h-viewport-full">
+      <div class="border-b border--gray-light px24 py12 w-full">
+        <h1 class="txt-l txt-bold">
+          The
+          <a
+            href="https://github.com/mapbox/jsxtreme-markdown"
+            class="link link--pink"
+            >jsxtreme-markdown</a
+          >
+          xperimental playground
+        </h1>
+        <p class="txt-s mt6">
+          <a href="https://github.com/mapbox/jsxtreme-markdown" class="link"
+            >jsxtreme-markdown</a
+          >
+          allows you to interpolate JS expressions and JSX elements in your
+          Markdown, between <code className="txt-code">{{ delimiters }}</code>,
+          and compiles the Markdown to JSX.
+        </p>
+        <p class="txt-s">
+          Look at the xample below, xperiment, and
+          <a href="https://github.com/mapbox/jsxtreme-markdown" class="link"
+            >check out the repository</a
+          >.
+        </p>
+      </div>
+      <div class="grid txt-s txt-mono border-b border--gray-light">
+        <div class="col w-full w-1/2-mm">
+          <div class="px12 py3">INPUT: jsxtreme-markdown</div>
+        </div>
+        <div class="col w-full w-1/2-mm border-l border--gray-light">
+          <div class="px12 py3">OUTPUT: JSX</div>
         </div>
       </div>
-      <div class="col col--12 col--6-mm border-l border--gray-light">
-        <div class="px12 py3">
-          OUTPUT: JSX
+      <div class="flex--grow flex flex--stretch-cross">
+        <div class="grid w-full wmax-none">
+          <div id="input-container" class="col w-full w-1/2-mm"></div>
+          <div
+            id="output-container"
+            class="col w-full w-1/2-mm border-l border--gray-light"
+          ></div>
         </div>
       </div>
-    </div>
-    <div class="flex-child flex-child--grow flex-parent flex-parent--stretch-cross">
-      <div class="grid flex-child flex-child--grow wmax-none">
-        <div id="input-container" class="col col--12 col--6-mm"></div>
-        <div id="output-container" class="col col--12 col--6-mm border-l border--gray-light"></div>
+      <div class="border-t border--gray-light px6 py6 hmin-24">
+        <div
+          id="error"
+          class="
+            none
+            px12
+            py6
+            border border--red
+            round
+            bg-red-faint
+            color-red
+            txt-code
+          "
+        ></div>
       </div>
     </div>
-    <div class="border-t border--gray-light px6 py6 hmin-24">
-      <div id="error" class="none px12 py6 border border--red round bg-red-faint color-red txt-code"></div>
-    </div>
-  </div>
-  <script src="dist/bundle.js"></script>
-</body>
+    <script src="dist/bundle.js"></script>
+  </body>
 </html>
